--- a/templates/List.mustache
+++ b/templates/List.mustache
@@ -1,3 +1,26 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>DuckDuckGo Stories: {{category}}</title>
+</head>
+<body>
+    <div class="header">
+        <h1>DuckDuckGo Stories: {{category}}</h1>
+    </div>
+    <div class="stories">
 
-Hello {{who}}
-  
+        {{#stories}}
+        <div class="story">
+            <img src="{{image}}" alt="image">
+            <a href="{{url}}">
+                <h3>{{title}}</h3>
+                <p>{{description}}</p>
+            </a>
+            <p>Category: {{category}}</p>
+        </div>
+        {{/stories}}
+
+    </div>
+</body>
+</html>
